# vipir

./: .gitignore  CMakeLists.txt  LICENSE  test.tst
example/: example.cpp
include/vipir/: Module.h
include/vipir/ABI/: ABI.h  CallingConvention.h  SysV.h  WinABI.h
include/vipir/DI/: DIBuilder.h  DIType.h  DIVariable.h
include/vipir/IR/: Argument.h  BasicBlock.h  Builder.h  Function.h  Global.h  GlobalString.h  GlobalVar.h  IRBuilder.h  Value.h
include/vipir/IR/Constant/: Constant.h  ConstantArray.h  ConstantBool.h  ConstantInt.h  ConstantNullPtr.h  ConstantStruct.h
include/vipir/IR/Debug/: EmitDebugInfo.h  QueryAddress.h
include/vipir/IR/Instruction/: AddrInst.h  AddrOfInst.h  AllocaInst.h  BinOpInst.h  BinaryInst.h  BranchInst.h  CallInst.h  GEPInst.h  Instruction.h  IntToPtrInst.h  LoadInst.h  PhiInst.h  PtrCastInst.h  PtrToIntInst.h  RetInst.h  SExtInst.h  SelectInst.h  StoreInst.h  StoreParamInst.h  TruncInst.h  UnaryInst.h  ZExtInst.h
include/vipir/LIR/: Builder.h  Global.h  Label.h  Operand.h  Section.h  Value.h
include/vipir/LIR/Instruction/: Add.h  Arithmetic.h  Compare.h  EnterFunc.h  Jump.h  LoadAddress.h  Move.h  Ret.h
include/vipir/MC/: Builder.h  CmpOperand.h  CompoundOperand.h  StructOperand.h
include/vipir/Optimizer/AA/: AliasAnalysis.h
include/vipir/Optimizer/DCE/: DeadCodeElimination.h
include/vipir/Optimizer/Mem2Reg/: Dom.h  Mem2Reg.h
include/vipir/Optimizer/Peephole/: Peephole.h  PeepholeV2.h
include/vipir/Optimizer/RegAlloc/: RegAlloc.h  VReg.h
include/vipir/Pass/: DefaultPass.h  IRInfoPass.h  Pass.h
include/vipir/Type/: ArrayType.h  BooleanType.h  FunctionType.h  IntegerType.h  PointerType.h  StructType.h  Type.h  VoidType.h
src/vipir/: Module.cpp
src/vipir/ABI/: SysV.cpp  WinABI.cpp
src/vipir/DI/: DIBuilder.cpp  DIType.cpp  DIVariable.cpp
src/vipir/IR/: Argument.cpp  BasicBlock.cpp  Builder.cpp  Function.cpp  GlobalString.cpp  GlobalVar.cpp  IRBuilder.cpp
src/vipir/IR/Constant/: ConstantArray.cpp  ConstantBool.cpp  ConstantInt.cpp  ConstantNullPtr.cpp  ConstantStruct.cpp
src/vipir/IR/Debug/: EmitDebugInfo.cpp  QueryAddress.cpp
src/vipir/IR/Instruction/: AddrInst.cpp  AddrOfInst.cpp  AllocaInst.cpp  BinOpInst.cpp  BinaryInst.cpp  BranchInst.cpp  CallInst.cpp  GEPInst.cpp  Instruction.cpp  IntToPtrInst.cpp  LoadInst.cpp  PhiInst.cpp  PtrCastInst.cpp  PtrToIntInst.cpp  RetInst.cpp  SExtInst.cpp  SelectInst.cpp  StoreInst.cpp  StoreParamInst.cpp  TruncInst.cpp  UnaryInst.cpp  ZExtInst.cpp
src/vipir/LIR/: Builder.cpp  Global.cpp  Label.cpp  Operand.cpp  Section.cpp
src/vipir/LIR/Instruction/: Add.cpp  Arithmetic.cpp  Compare.cpp  EnterFunc.cpp  Jump.cpp  LoadAddress.cpp  Move.cpp  Ret.cpp
src/vipir/MC/: Builder.cpp  CmpOperand.cpp  CompoundOperand.cpp  StructOperand.cpp
src/vipir/Optimizer/AA/: AliasAnalysis.cpp
src/vipir/Optimizer/DCE/: DeadCodeElimination.cpp
src/vipir/Optimizer/Mem2Reg/: Dom.cpp  Mem2Reg.cpp
src/vipir/Optimizer/Peephole/: Peephole.cpp  PeepholeV2.cpp
src/vipir/Optimizer/RegAlloc/: RegAlloc.cpp  VReg.cpp
src/vipir/Pass/: DefaultPass.cpp  IRInfoPass.cpp  Pass.cpp
src/vipir/Type/: ArrayType.cpp  BooleanType.cpp  FunctionType.cpp  IntegerType.cpp  PointerType.cpp  StructType.cpp  Type.cpp  VoidType.cpp
